Add readyness probe

--- a/k8s-deploy-svc-ing.yaml.template
+++ b/k8s-deploy-svc-ing.yaml.template
@@ -19,9 +19,18 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
+
+        readinessProbe:
+          httpGet:
+            path: /qweqweqwe
+            port: 80
+          initialDelaySeconds: 20
+          failureThreshold: 5
+
         env:
         - name: SERVER_PORT
           value: "3000"
+
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
 ---
