--- a/k8s-deploy-svc-ing.yaml.template
+++ b/k8s-deploy-svc-ing.yaml.template
@@ -4,6 +4,7 @@ metadata:
   name: kubernetes-test-sharanov
 spec:
   replicas: 1
+  revisionHistoryLimit: 3
   selector:
     matchLabels:
       app: kubernetes-test-sharanov
@@ -19,6 +20,14 @@ spec:
         imagePullPolicy: Always
         ports:
           - containerPort: 3000
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 3000
+          periodSeconds: 10
+          timeoutSeconds: 1
+          successThreshold: 1
+          failureThreshold: 5
         env:
         - name: SERVER_PORT
           value: "3000"
