--- a/wercker.yml
+++ b/wercker.yml
@@ -25,7 +25,7 @@ push-image:
         password: $GCR_JSON_KEY_FILE
         ports: "3000"
         working-dir: $WERCKER_SOURCE_DIR
-        cmd: npm run start
+        cmd: node server.js
 
 
 deploy-beta:
