--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -14,18 +14,11 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format le_json '{ "time": "$time_iso8601", '
-     '"remote_addr": "$remote_addr", '
-     '"remote_user": "$remote_user", '
-     '"body_bytes_sent": "$body_bytes_sent", '
-     '"request_time": "$request_time", '
-     '"status": "$status", '
-     '"request": "$request", '
-     '"request_method": "$request_method", '
-     '"http_referrer": "$http_referer", '
-     '"http_user_agent": "$http_user_agent" }';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log /var/log/nginx/access.log le_json;
+    #access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
     #tcp_nopush     on;
@@ -48,6 +41,12 @@ http {
             rewrite
                 (?i)^/(.*)$
                 /index.html;
+        }
+
+        location = /ready {
+            add_header Content-Type text/plain;
+            access_log off;
+            return 200;
         }
 
         location / {
