--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -9,7 +9,6 @@ events {
     worker_connections  1024;
 }
 
-
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
@@ -37,23 +36,28 @@ http {
         gzip_proxied any;
         gzip_types text/plain text/css application/javascript;
 
-        location @router {
-            rewrite
-                (?i)^/(.*)$
-                /index.html;
-        }
-
-        location = /ready {
-            add_header Content-Type text/plain;
-            access_log off;
-            return 200;
-        }
-
         location / {
-            try_files $uri $uri/ @router;
-            gzip_static on;
-            expires off;
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
         }
+
+#        location @router {
+#            rewrite
+#                (?i)^/(.*)$
+#                /index.html;
+#        }
+
+#        location = /ready {
+#            add_header Content-Type text/plain;
+#            access_log off;
+#            return 200;
+#        }
+
+#        location / {
+#            try_files $uri $uri/ @router;
+#            gzip_static on;
+#            expires off;
+#        }
 
         location = /50x.html {
             root /usr/share/nginx/html;
