--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,20 @@ box: nginx
 
 install:
   steps:
-    - npm-install
+    - script:
+        name: apt-get-update
+        code: |
+          apt-get update
+
+    - script:
+        name: apt-get-install-vim
+        code: |
+          apt-get -y install vim
+
+    - script:
+        name: apt-get-install-curl
+        code: |
+          apt-get -y install curl
 
 # Prepare the image and push it to GCR
 push-image:
