--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,7 +1,7 @@
 user  nginx;
 worker_processes  1;
 
-error_log  /dev/stdout warn;
+error_log  /dev/stderr warn;
 pid        /var/run/nginx.pid;
 
 
