--- a/wercker.yml
+++ b/wercker.yml
@@ -1,24 +1,17 @@
 box: nginx
 
 install:
+
+  box: node:6.9.2
+
   steps:
-    - script:
-        name: apt-get update
-        code: |
-          apt-get -q update
-
-    - script:
-        name: apt-get install vim
-        code: |
-          apt-get -yq install vim
-
-    - script:
-        name: apt-get install curl
-        code: |
-          apt-get -yq install curl
+    - npm-install
 
 # Prepare the image and push it to GCR
 push-image:
+
+  box: nginx
+
   steps:
     # Build image and push it to GCR
     - internal/docker-push:
@@ -30,7 +23,23 @@ push-image:
         password: $GCR_JSON_KEY_FILE
         ports: "80"
         working-dir: $WERCKER_SOURCE_DIR
-        cmd: sleep 30; echo "stderr-error" > /dev/stderr;
+        entrypoint: nginx -g "daemon off;" -c /pipeline/source/etc/nginx.conf
+
+push-image-prod:
+
+  box: nginx
+
+  steps:
+    # Build image and push it to GCR
+    - internal/docker-push:
+        registry: $GCE_REGISTRY
+        repository: $GCE_REPOSITORY/kubernetes-test-sharanov
+        tag: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
+        author: Hauskontor
+        username: _json_key
+        password: $GCR_JSON_KEY_FILE
+        ports: "80"
+        working-dir: $WERCKER_SOURCE_DIR
         entrypoint: nginx -g "daemon off;" -c /pipeline/source/etc/nginx.conf
 
 deploy-beta:
@@ -45,7 +54,6 @@ deploy-beta:
           ls -la
           mkdir $WERCKER_OUTPUT_DIR/k8s
           mv k8s-*.yaml $WERCKER_OUTPUT_DIR/k8s
-
     # Deploy by applying new Deployment
     - kubectl:
         command: apply -f $WERCKER_OUTPUT_DIR/k8s/
