--- a/k8s-deploy-svc-ing.yaml.template
+++ b/k8s-deploy-svc-ing.yaml.template
@@ -19,7 +19,12 @@ spec:
         args:
         - /bin/sh
         - -c
-        - touch /tmp/healthy; sleep 30; echo "ra-ra-ra-ra-ra" > /dev/stderr; rm -rf /tmp/healthy; sleep 60
+        - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 30
+        lifecycle:
+          preStop:
+            exec:
+              command:
+                - "echo ra-ra-ra-ra-ra > /dev/stderr"
         image: gcr.io/google_containers/busybox
         imagePullPolicy: Always
         ports:
