--- a/k8s-deploy-svc-ing.yaml.template
+++ b/k8s-deploy-svc-ing.yaml.template
@@ -20,6 +20,13 @@ spec:
         - /bin/sh
         - -c
         - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 30
+        lifecycle:
+          postStart:
+            exec:
+              command:
+              - /bin/sh
+              - -c
+              - "echo Hello from the postStart handler > /dev/stdout"
         image: gcr.io/google_containers/busybox
         imagePullPolicy: Always
         ports:
