--- a/k8s-deploy-svc-ing.yaml.template
+++ b/k8s-deploy-svc-ing.yaml.template
@@ -21,6 +21,7 @@ spec:
         - -c
         - touch /tmp/healthy
         #; sleep 30; rm -rf /tmp/healthy; sleep 30
+        image: gcr.io/google_containers/busybox
         imagePullPolicy: Always
         ports:
           - containerPort: 80
