--- a/k8s-deploy-svc-ing.yaml.template
+++ b/k8s-deploy-svc-ing.yaml.template
@@ -1,52 +1,16 @@
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: kubernetes-test-sharanov
-spec:
-  replicas: 1
-  revisionHistoryLimit: 3
-  selector:
-    matchLabels:
-      app: kubernetes-test-sharanov
-  template:
-    metadata:
-      labels:
-        app: kubernetes-test-sharanov
-        # version: ${WERCKER_GIT_BRANCH}-${WERCKER_GIT_COMMIT}
-    spec:
-      containers:
-      - name: kubernetes-test-sharanov
-        args:
-        - /bin/sh
-        - -c
-        - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 30
-        lifecycle:
-          preStop:
-            exec:
-              command: ["/bin/sh", "-c", "echo pre stop event > /dev/stderr"]
-        image: gcr.io/google_containers/busybox
-        imagePullPolicy: Always
-        ports:
-          - containerPort: 80
-        readinessProbe:
-          exec:
-            command:
-            - cat
-            - /tmp/healthy
-          initialDelaySeconds: 5
-          periodSeconds: 5
-
-      restartPolicy: Always
-      terminationGracePeriodSeconds: 30
----
 apiVersion: v1
-kind: Service
+kind: Pod
 metadata:
-  name: kubernetes-test-sharanov
+  name: lifecycle-test
 spec:
-  type: NodePort
-  ports:
-  - port: 80
-    targetPort: 80
-  selector:
-    app: kubernetes-test-sharanov
+  containers:
+  - name: lifecycle-test-container
+    image: nginx
+
+    lifecycle:
+      postStart:
+        exec:
+          command: ["/bin/sh", "-c", "echo Hello from the postStart handler > /usr/share/message"]
+      preStop:
+        exec:
+          command: ["/usr/sbin/nginx","-s","quit"]
