--- a/k8s-deploy-svc-ing.yaml.template
+++ b/k8s-deploy-svc-ing.yaml.template
@@ -1,10 +1,12 @@
-apiVersion: v1
+apiVersion: extensions/v1beta1
 kind: Pod
 metadata:
   name: lifecycle-test
 spec:
+  replicas: 1
+  revisionHistoryLimit: 1
   containers:
-  - name: lifecycle-test-container
+  - name: lifecycle-test
     image: nginx
 
     lifecycle:
@@ -13,16 +15,4 @@ spec:
           command: ["/bin/sh", "-c", "echo Error from the postStart > /dev/stderr"]
       preStop:
         exec:
-          command: ["/usr/sbin/nginx","-s","quit"]
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: lifecycle-test
-spec:
-  type: NodePort
-  ports:
-  - port: 80
-    targetPort: 80
-  selector:
-    app: lifecycle-test
+          command: ["/bin/sh", "-c", "echo Error from the preStop > /dev/stderr"]
