--- a/k8s-deploy-svc-ing.yaml.template
+++ b/k8s-deploy-svc-ing.yaml.template
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: v1
 kind: Pod
 metadata:
   name: lifecycle-test
@@ -15,4 +15,4 @@ spec:
           command: ["/bin/sh", "-c", "echo Error from the postStart > /dev/stderr"]
       preStop:
         exec:
-          command: ["/bin/sh", "-c", "echo Error from the preStop > /dev/stderr"]
+          command: ["/usr/sbin/nginx","-s","quit"]
